# JustCollecte

./: CMakeLists.txt  main.cpp
include/npc/: Citizen.hpp
include/ressources/: Ressource.hpp
include/ressources/Trees/: Olk.hpp  Pine.hpp  Tree.hpp
src/: Citizen.cpp  Olk.cpp  Ressource.cpp
src/ressources/Trees/: Pine.cpp  Tree.cpp
